Can't build product VM without precompiled header

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • b08
    • x86
    • generic

        Note, by default we use precompiled header. It is not normal case.

        export USE_PRECOMPILED_HEADER=0

        When trying to execute built product VM produce:

        On solaris:
        java -Xcomp t
        Error: dl failure on line 744
        Error: failed jre/lib/i386/server/libjvm.so, because jre/lib/i386/server/libjvm.so: undefined symbol: _ZN8CHeapObjILt1792EEdlEPv

        or on Mac:

        Undefined symbols for architecture x86_64:
          "CHeapObj<(unsigned short)1792>::operator delete(void*)", referenced from:
              RTMLockingCalculationTask::task() in rtmLocking.o
        ld: symbol(s) not found for architecture x86_64

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: