8038181: Can't build product VM without precompiled header

Added missing #include.

Reviewed-by: twisti